# tabular-agent

./: .env  .gitignore  README.md  SLM.xlsx  agent_flow.md  crawl_pydanticai.py  hello.py  pydantic_ai_docs.md  pyproject.toml  requirements.txt  table_model_agent.py  tabular_agent.py  veggies.xlsx
