[project]
name = "tabular-agent"
version = "0.1.0"
description = "An AI-powered tool for generating table structures and sample data using GPT models, featuring interactive structure generation, data type inference, and dynamic Pydantic model creation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "crawl4ai>=0.4.248",
    "duckduckgo-search>=7.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydantic-ai>=0.0.24",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tavily-python>=0.5.1",
]
